# soil_roughness_change_detection

./: .gitignore  Makefile  README.md  config_template.py  data_exploration.ipynb  dataloader.ipynb  evaluation.ipynb  evaluation_with_norm.ipynb  experiment.ipynb  experiment_grd.ipynb  experiment_grd_float.ipynb  experiment_grd_plain.ipynb  experiment_with_normalization_grd.ipynb  experiment_with_normalization_grd_no_orbit.ipynb  pyproject.toml  visualization.ipynb
data/: harrysfarm_tillage_activity.csv
results/: dbscan_test_result_feature.json  isolation_forest_test_result_feature.json  isolation_forest_test_result_feature_norm.json  isolation_forest_train_result_feature_0.json  isolation_forest_train_result_feature_0_grd.json  isolation_forest_train_result_feature_0_grd_float.json  isolation_forest_train_result_feature_0_grd_norm.json  isolation_forest_train_result_feature_0_grd_norm_no_orbit.json  isolation_forest_train_result_feature_0_grd_plain.json  isolation_forest_train_result_feature_1.json  isolation_forest_train_result_feature_1_grd.json  isolation_forest_train_result_feature_1_grd_float.json  isolation_forest_train_result_feature_1_grd_norm.json  isolation_forest_train_result_feature_1_grd_norm_no_orbit.json  isolation_forest_train_result_feature_1_grd_plain.json  isolation_forest_train_result_feature_2.json  isolation_forest_train_result_feature_2_grd.json  isolation_forest_train_result_feature_2_grd_float.json  isolation_forest_train_result_feature_2_grd_norm.json  isolation_forest_train_result_feature_2_grd_norm_no_orbit.json  (+24 more)
(+9 files in other folders)
