[tool.poetry]
name = "soil-roughness-change-detection"
version = "0.1.0"
description = ""
authors = ["Thummanoon Kunanuntakij"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
geemap = "^0.32.0"
geopandas = "^0.14.3"
earthengine-api = "^0.1.395"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
numpy = "^1.26.4"
ipyleaflet = "^0.18.2"
jupyter-contrib-nbextensions = "^0.7.0"
nbclassic = "^1.0.0"
pycrs = "^1.0.2"
pyaxis = "^0.3.4"
netcdf4 = "^1.6.5"
openpyxl = "^3.1.2"
plotly = "^5.22.0"
pingouin = "^0.5.4"
pca = "^2.0.7"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
